2013-11-03 German Arias <germanandre@gmx.es>

	* Source/NSUndoManager.m (-redoMenuTitleForUndoActionName:):
	* Source/NSUndoManager.m (-undoMenuTitleForUndoActionName:):
	Return "Redo" and "Undo", respectively, if actionName is null.
	If not, it removes the item title.

2013-11-01  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSAttributedString.m: Use exact equality test when removing
        attribute dictionary from cache.  Prevents possibly removing the
        wrong dictionary in cases where dictionary contents are mutated
        while in the cache, such that two dictionaries become equal.

2013-10-30  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSDictionary.m: Add private class GSCachedDictionary which
        will raise an exception if deallocated without being uncached.
        * Source/GSAttributedString.m: Use GSCachedDictionary for attributes
        to aid in detection of things improperly releasing them.

2013-10-29  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSAttributedString.m:
        Simplify dictionary caching code and add check to ensure we don't
        uncache a dictionary which isn't cached.

2012-10-29  Riccardo Mottola <rm@gnu.org>

        * configure.ac:
        * Headers/GNUstepBase/GSConfig.h.in:
        * Headers/GNUstepBase/GSTypeEncoding.h:
        * Headers/GNUstepBase/GNUstep.h:
        * Headers/Foundation/NSString.h:
        * Headers/Foundation/NSObjCRuntime.h:
        * configure: regenerate
        Use inttypes.h rather than stdint.h as it's more inclusive and works
        on Solaris where some defines are in the wrong place.
 
2013-10-29  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSTimeZone.m: Implement -hash as the hash of the time zone
        name so that we can find equal timezones in a set/dictionary as we
        should, rather than onlyn finding identical time zones.

2013-10-28  Richard Frith-Macdonald <rfm@gnu.org>
