@@ -1,3 +1,8 @@
+2013-11-05 German Arias <germanandre@gmx.es>
+
+	* Source/NSUndoManager.m (-undoActionName): Try first with the name
+	of current group. If not, with the name of last object in undo stack.
+
 2013-11-03 German Arias <germanandre@gmx.es>
 
 	* Source/NSUndoManager.m (-redoMenuTitleForUndoActionName:):
